--- a/src/app/pages/doctor-details/doctor-details.html
+++ b/src/app/pages/doctor-details/doctor-details.html
@@ -30,7 +30,7 @@
             <!-- Main Image -->
             <div class="col-lg-6">
                 <div class="detail-image">
-                    <img *ngIf="doctor.images && doctor.images.length" [src]="baseUrl + doctor.images[0].url"
+                    <img *ngIf="doctor.images && doctor.images.length" [src]="baseUrl + doctor.profile_photo"
                         class="img-fluid w-100 rounded-4" [alt]="doctor.name || 'Doctor image'" />
                 </div>
             </div>
@@ -59,7 +59,7 @@
                         <div class="col-lg-6">
                             <div class="detail-location doctor-feture-lst d-flex align-items-center card-location">
                                 <img src="assets/images/card-location.svg">
-                                <p class="mb-0"> Indore, M.p., India</p>
+                                <p class="mb-0"> {{ doctor.location || 'N/A' }}</p>
                             </div>
                         </div>
                         <div class="col-lg-6">
@@ -372,126 +372,73 @@
                         <p>Frequently Asked Questions</p>
                         <h4>Helping you understand healthcare</h4>
                     </div>
+
                     <div class="accordion accordion-main" id="accordionExample">
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" id="headingOne">
-                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseOne">Lorem Ipsum is simply dummy text of the
-                                    printing</button>
-                            </h2>
-                            <div id="collapseOne" class="accordion-collapse collapse show"
-                                data-bs-parent="#accordionExample">
-                                <div class="accordion-body">
-                                    <p class="mb-0">Lorem Ipsum is simply dummy text of the printing and typesetting
-                                        industry. Lorem Ipsum has been the industry's standard dummy text ever since the
-                                        1500s, when an unknown printer took a galley of type and scrambled.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" id="headingOne">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapsetwo" aria-expanded="false" aria-controls="collapsetwo">
-                                    Lorem Ipsum is simply dummy text of the printing
+                        <div class="accordion-item" *ngFor="let faq of getDynamicFaqs(); let i = index">
+                            <h2 class="accordion-header" [id]="'heading' + i">
+                                <button class="accordion-button" type="button" [class.collapsed]="!isFaqExpanded(i)"
+                                    (click)="toggleFaq(i)" [attr.aria-expanded]="isFaqExpanded(i)"
+                                    [attr.data-bs-target]="'#collapse' + i" [attr.aria-controls]="'collapse' + i">
+                                    {{ faq.question }}
                                 </button>
                             </h2>
-                            <div id="collapsetwo" class="accordion-collapse collapse"
-                                data-bs-parent="#accordionExample">
+                            <div [id]="'collapse' + i" class="accordion-collapse collapse"
+                                [class.show]="isFaqExpanded(i)" data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <p class="mb-0">
-                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                                        when an unknown printer took a galley of type and scrambled.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" id="headingOne">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapsetwo" aria-expanded="false" aria-controls="collapsetwo">
-                                    Lorem Ipsum is simply dummy text of the printing
-                                </button>
-                            </h2>
-                            <div id="collapsetwo" class="accordion-collapse collapse"
-                                data-bs-parent="#accordionExample">
-                                <div class="accordion-body">
-                                    <p class="mb-0">
-                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                                        when an unknown printer took a galley of type and scrambled.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" id="headingOne">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapsetwo" aria-expanded="false" aria-controls="collapsetwo">
-                                    Lorem Ipsum is simply dummy text of the printing
-                                </button>
-                            </h2>
-                            <div id="collapsetwo" class="accordion-collapse collapse"
-                                data-bs-parent="#accordionExample">
-                                <div class="accordion-body">
-                                    <p class="mb-0">
-                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                                        when an unknown printer took a galley of type and scrambled.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" id="headingOne">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapsetwo" aria-expanded="false" aria-controls="collapsetwo">
-                                    Lorem Ipsum is simply dummy text of the printing
-                                </button>
-                            </h2>
-                            <div id="collapsetwo" class="accordion-collapse collapse"
-                                data-bs-parent="#accordionExample">
-                                <div class="accordion-body">
-                                    <p class="mb-0">
-                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                                        when an unknown printer took a galley of type and scrambled.
-                                    </p>
+                                    <p class="mb-0">{{ faq.answer }}</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6">
+
+            <div class="col-lg-6 col-md-12">
                 <div class="detail-doctors">
                     <div class="dtl-doctor-head d-flex align-items-center justify-content-between">
                         <h4>Related Top Doctors</h4>
-                        <a href="#">View All</a>
+                        <a routerLink="/doctors">View All</a>
                     </div>
-                    <div class="dtl-doctor-list d-flex align-items-center">
-                        <div class="dtl-doctor-img">
-                            <img [src]="'assets/images/dtl-doctor.png'" class="img-fluid">
+
+                    <!-- Loading state -->
+                    <div *ngIf="loadingRelatedDoctors" class="text-center py-3">
+                        <div class="spinner-border spinner-border-sm" role="status">
+                            <span class="visually-hidden">Loading related doctors...</span>
                         </div>
-                        <div class="dtl-doctor-info">
-                            <p>Dr. Prof Raju Vaishya</p>
-                            <ul>
-                                <li>Orthopaedic Surgeon</li>
-                                <li>35 Years of Experience</li>
+                        <p class="mt-2 mb-0 text-muted small">Loading doctors from {{ hospitalName }}...</p>
+                    </div>
+
+                    <!-- Dynamic related doctors list -->
+                    <div *ngFor="let relatedDoctor of relatedDoctors" 
+                         class="dtl-doctor-list d-flex align-items-start flex-column flex-sm-row mb-3"
+                         [routerLink]="['/doctor', relatedDoctor.id]"
+                         style="cursor: pointer;">
+                        <div class="dtl-doctor-img mb-2 mb-sm-0 flex-shrink-0">
+                            <img *ngIf="relatedDoctor.profile_photo" 
+                                 [src]="baseUrl + relatedDoctor.profile_photo" 
+                                 [alt]="relatedDoctor.name"
+                                 class="img-fluid">
+                            <img *ngIf="!relatedDoctor.profile_photo" 
+                                 [src]="'assets/images/dtl-doctor.png'" 
+                                 class="img-fluid">
+                        </div>
+                        <div class="dtl-doctor-info ms-sm-3 w-100">
+                            <p class="mb-1 fw-semibold">{{ relatedDoctor.name }}</p>
+                            <ul class="ps-0 mb-0 list-unstyled">
+                                <li class="text-muted small">{{ relatedDoctor.designation || relatedDoctor.specialization }}</li>
+                                <li class="text-muted small" *ngIf="relatedDoctor.experience_years">
+                                    {{ relatedDoctor.experience_years }} Years of Experience
+                                </li>
+                                <li class="text-muted small" *ngIf="!relatedDoctor.experience_years && relatedDoctor.consultancy_fee">
+                                    Consultation Fee: ₹{{ relatedDoctor.consultancy_fee | number }}
+                                </li>
                             </ul>
                         </div>
                     </div>
-                    <div class="dtl-doctor-list d-flex align-items-center">
-                        <div class="dtl-doctor-img">
-                            <img [src]="'assets/images/dtl-doctor.png'" class="img-fluid">
-                        </div>
-                        <div class="dtl-doctor-info">
-                            <p>Dr. Prof Raju Vaishya</p>
-                            <ul>
-                                <li>Orthopaedic Surgeon</li>
-                                <li>35 Years of Experience</li>
-                            </ul>
-                        </div>
+
+                    <!-- No related doctors found -->
+                    <div *ngIf="!loadingRelatedDoctors && relatedDoctors.length === 0" class="text-center py-3">
+                        <p class="mb-0 text-muted">No other doctors found from {{ hospitalName || 'this hospital' }}.</p>
                     </div>
                 </div>
             </div>
