--- a/src/app/pages/hospital-detail/hospital-detail.html
+++ b/src/app/pages/hospital-detail/hospital-detail.html
@@ -50,7 +50,8 @@
                     <div class="dtl-head">
                         <h2>Lorem ipsum is simply dummy text</h2>
                     </div>
-                    <p class="mb-0">Cras vel bibendum nisl. Sed tincidunt purus nec vehicula aliquet. Vestibulum gravida molestie
+                    <p class="mb-0">Cras vel bibendum nisl. Sed tincidunt purus nec vehicula aliquet. Vestibulum gravida
+                        molestie
                         lectus, ut facilisis nisl ultrices eu. Ut sed nunc quis metus egestas fringilla sed at arcu.
                         Aenean vel varius orci. Morbi sed augue at odio mattis vehicula. Quisque nisl dui, vehicula vel
                         lacinia congue, pellentesque eget dolor. Aliquam ullamcorper tempus risus ut luctus. Curabitur
@@ -112,11 +113,11 @@
         <div class="row">
             <div class="col-lg-6 col-md-6">
                 <img *ngIf="hospital.images && hospital.images.length" [src]="baseUrl + hospital.images[2].url"
-                        class="img-fluid w-100 rounded-4" [alt]="hospital.name" />
+                    class="img-fluid w-100 rounded-4" [alt]="hospital.name" />
             </div>
             <div class="col-lg-6 col-md-6">
                 <img *ngIf="hospital.images && hospital.images.length" [src]="baseUrl + hospital.images[3].url"
-                        class="img-fluid w-100 rounded-4" [alt]="hospital.name" />
+                    class="img-fluid w-100 rounded-4" [alt]="hospital.name" />
             </div>
         </div>
     </div>
@@ -130,99 +131,34 @@
                         <p>Frequently Asked Questions</p>
                         <h4>Helping you understand healthcare</h4>
                     </div>
+
                     <div class="accordion accordion-main" id="accordionExample">
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" id="headingOne">
-                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseOne">Lorem Ipsum is simply dummy text of the printing</button>
-                            </h2>
-                            <div id="collapseOne" class="accordion-collapse collapse show"
-                                data-bs-parent="#accordionExample">
-                                <div class="accordion-body">
-                                    <p class="mb-0">Lorem Ipsum is simply dummy text of the printing and typesetting
-                                        industry. Lorem Ipsum has been the industry's standard dummy text ever since the
-                                        1500s, when an unknown printer took a galley of type and scrambled.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" id="headingOne">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapsetwo" aria-expanded="false" aria-controls="collapsetwo">
-                                    Lorem Ipsum is simply dummy text of the printing
+                        <div class="accordion-item" *ngFor="let faq of getDynamicFaqs(); let i = index">
+                            <h2 class="accordion-header" [id]="'heading' + i">
+                                <button class="accordion-button" type="button" [class.collapsed]="!isFaqExpanded(i)"
+                                    (click)="toggleFaq(i)" [attr.aria-expanded]="isFaqExpanded(i)"
+                                    [attr.data-bs-target]="'#collapse' + i" [attr.aria-controls]="'collapse' + i">
+                                    {{ faq.question }}
                                 </button>
                             </h2>
-                            <div id="collapsetwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                            <div [id]="'collapse' + i" class="accordion-collapse collapse"
+                                [class.show]="isFaqExpanded(i)" [attr.data-bs-parent]="'#accordionExample'">
                                 <div class="accordion-body">
-                                    <p class="mb-0">
-                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                                        when an unknown printer took a galley of type and scrambled.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" id="headingOne">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapsetwo" aria-expanded="false" aria-controls="collapsetwo">
-                                    Lorem Ipsum is simply dummy text of the printing
-                                </button>
-                            </h2>
-                            <div id="collapsetwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                                <div class="accordion-body">
-                                    <p class="mb-0">
-                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                                        when an unknown printer took a galley of type and scrambled.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" id="headingOne">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapsetwo" aria-expanded="false" aria-controls="collapsetwo">
-                                    Lorem Ipsum is simply dummy text of the printing
-                                </button>
-                            </h2>
-                            <div id="collapsetwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                                <div class="accordion-body">
-                                    <p class="mb-0">
-                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                                        when an unknown printer took a galley of type and scrambled.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" id="headingOne">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapsetwo" aria-expanded="false" aria-controls="collapsetwo">
-                                    Lorem Ipsum is simply dummy text of the printing
-                                </button>
-                            </h2>
-                            <div id="collapsetwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                                <div class="accordion-body">
-                                    <p class="mb-0">
-                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                                        when an unknown printer took a galley of type and scrambled.
-                                    </p>
+                                    <p class="mb-0">{{ faq.answer }}</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+
             <div class="col-lg-6">
                 <div class="detail-doctors">
                     <div class="dtl-doctor-head d-flex align-items-center justify-content-between">
                         <h4>Top Doctors</h4>
                         <a href="/doctors">View All</a>
                     </div>
-                    
+
                     <!-- Loading state -->
                     <div *ngIf="loadingDoctors" class="text-center py-3">
                         <div class="spinner-border spinner-border-sm" role="status">
@@ -230,34 +166,32 @@
                         </div>
                         <p class="mt-2 mb-0">Loading hospital doctors...</p>
                     </div>
-                    
+
                     <!-- Dynamic doctor list -->
                     <div *ngFor="let doctor of hospitalDoctors" class="dtl-doctor-list d-flex align-items-center">
                         <div class="dtl-doctor-img">
-                            <img *ngIf="doctor.profile_photo" 
-                                 [src]="baseUrl + doctor.profile_photo" 
-                                 [alt]="doctor.name" 
-                                 class="img-fluid">
-                            <img *ngIf="!doctor.profile_photo" 
-                                 [src]="'assets/images/dtl-doctor.png'" 
-                                 class="img-fluid">
+                            <img *ngIf="doctor.profile_photo" [src]="baseUrl + doctor.profile_photo" [alt]="doctor.name"
+                                class="img-fluid">
+                            <img *ngIf="!doctor.profile_photo" [src]="'assets/images/dtl-doctor.png'" class="img-fluid">
                         </div>
                         <div class="dtl-doctor-info">
                             <p>{{ doctor.name }}</p>
                             <ul>
                                 <li>{{ doctor.designation || doctor.specialization }}</li>
-                                <li *ngIf="doctor.experience_years">{{ doctor.experience_years }} Years of Experience</li>
-                                <li *ngIf="!doctor.experience_years && doctor.consultancy_fee">Consultation Fee: ₹{{ doctor.consultancy_fee | number }}</li>
+                                <li *ngIf="doctor.experience_years">{{ doctor.experience_years }} Years of Experience
+                                </li>
+                                <li *ngIf="!doctor.experience_years && doctor.consultancy_fee">Consultation Fee: ₹{{
+                                    doctor.consultancy_fee | number }}</li>
                             </ul>
                         </div>
                     </div>
-                    
+
                     <!-- No doctors found -->
                     <div *ngIf="!loadingDoctors && hospitalDoctors.length === 0" class="text-center py-3">
                         <p class="mb-0 text-muted">No doctors available at this time.</p>
                         <small class="text-muted">Please check back later or contact us for more information.</small>
                     </div>
-                    
+
                     <!-- Debug info (remove in production) -->
                     <div *ngIf="!loadingDoctors" class="mt-2" style="font-size: 12px; color: #666;">
                         <small>Debug: {{ hospitalDoctors.length }} doctors loaded</small>
