--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -68,7 +68,7 @@
 }
 
 .banner-offer img {
-    width: 75px;
+    width: 80px;
     margin-bottom: 15px;
 }
 
@@ -118,9 +118,13 @@
 .offer-info h4 {
     color: var(--secondary-color);
     font-family: var(--primary-font);
-    font-size: 24px;
+    font-size: 22px;
 }
-
+.client-feedback .user-card-rating
+{
+    margin-top: 0px;
+    margin-bottom: 10px;
+}
 .offer-info {
     background: linear-gradient(#f0f7fd00, #F0F7FD);
     position: absolute;
@@ -287,12 +291,14 @@
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
+    font-weight: 400;
+    margin-bottom: 0px;
 }
 
 .feedback-profile img {
-    height: 50px;
+    height: 45px;
     object-fit: cover;
-    width: 50px !important;
+    width: 45px !important;
     margin-bottom: 0px;
 }
 
@@ -463,7 +469,7 @@
 
 .user-card-rating {
     gap: 3px;
-    margin-bottom: 15px;
+    margin-top: 10px;
 }
 
 .faq-head p {
@@ -847,10 +853,6 @@
 {
     margin-bottom: 40px;
 }
-.filter-main .filter-item
-{
-    width: 50%;
-}
 .privacy-main h2
 {
     color: #151515;
@@ -877,6 +879,19 @@
 .attraction-main .detail-doctors.recent-post
 {
     margin-left: 0px;
+}
+.feedback-card hr
+{
+    border-color: #556171;
+    margin: 13px 0px;
+}
+.client-feedback .owl-carousel .owl-dots
+{
+  display: block !important;
+}
+.search-box-mob
+{
+    display: none;
 }
 /* responsive start */
 @media only screen and (min-width: 768px) and (max-width: 1024px)
@@ -1435,7 +1450,7 @@
     }
     .user-card-img
     {
-        height: 170px;
+        height: 210px;
     }
     .user-card-img img
     {
@@ -1505,5 +1520,32 @@
     {
         margin-top: 0px;
         margin-bottom: 20px;
+    }
+    .search-box-mob 
+    {
+        display: block;
+    }
+    .search-box
+    {
+        display: none;
+    }
+    .navbar
+    {
+        top: 0;
+        right: 0;
+        left: 0;
+        position: fixed !important;
+    }
+    .custom-dropdown
+    {
+        width: 100%;
+    }
+    .navbar .collapse li.dropdown ul.dropdown-menu
+    {
+        margin: 10px 0px;
+    }
+    .main-content
+    {
+        padding-top: 60px;
     }
 }
