--- a/src/app/shared/components/header/header.css
+++ b/src/app/shared/components/header/header.css
@@ -10,6 +10,10 @@
   font-size: 1.5rem;
 }
 
+.navbar ul.navbar-nav {
+  align-items: center;
+}
+
 .nav-link {
   font-weight: 500;
   color: var(--text-color) !important;
@@ -45,124 +49,136 @@
   box-shadow: none;
   outline: none;
 }
+
 .navbar-expand-lg .navbar-nav .nav-link,
-.navbar .collapse li.dropdown ul.dropdown-menu li a
-{
-    font-size: 14px;
-    color: var(--secondary-color);
-    font-family: var(--primary-font);
+.navbar .collapse li.dropdown ul.dropdown-menu li a {
+  font-size: 14px;
+  color: var(--secondary-color);
+  font-family: var(--primary-font);
 }
-.navbar .collapse li.dropdown ul.dropdown-menu
-{
+
+.navbar .collapse li.dropdown ul.dropdown-menu {
   border: none;
   padding: 0px;
   box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
 }
-.navbar .collapse li.dropdown ul.dropdown-menu li a
-{
+
+.navbar .collapse li.dropdown ul.dropdown-menu li a {
   font-family: "Lexend-Regular" !important;
   border-bottom: 1px solid #BAB9B9;
   padding: 8px 15px;
 }
+
 .navbar .collapse li.dropdown ul.dropdown-menu li a:hover,
-.navbar .collapse li.dropdown ul.dropdown-menu li a.active
-{
+.navbar .collapse li.dropdown ul.dropdown-menu li a.active {
   background-color: var(--primary-color);
   color: #fff !important;
 }
-.navbar .collapse li.dropdown ul.dropdown-menu li:first-child a
-{
+
+.navbar .collapse li.dropdown ul.dropdown-menu li:first-child a {
   border-radius: 5px 5px 0px 0px;
 }
-.navbar .collapse li.dropdown ul.dropdown-menu li:last-child a
-{
+
+.navbar .collapse li.dropdown ul.dropdown-menu li:last-child a {
   border-bottom: none;
   border-radius: 0px 0px 5px 5px;
 }
-.head-searchbar .add-on .input-group-btn > .btn {
-  border-left-width:0;left:-2px;
+
+.head-searchbar .add-on .input-group-btn>.btn {
+  border-left-width: 0;
+  left: -2px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 }
+
 /* stop the glowing blue shadow */
 .head-searchbar .add-on .form-control:focus {
- box-shadow:none;
- -webkit-box-shadow:none; 
- border-color:#cccccc; 
+  box-shadow: none;
+  -webkit-box-shadow: none;
+  border-color: #cccccc;
 }
-.head-searchbar .form-control
-{
-  width:20%;
+
+.head-searchbar .form-control {
+  width: 20%;
   font-size: 15px;
   margin-top: -5px;
 }
-.my-navbar-nav > li > a {
+
+.my-navbar-nav>li>a {
   border-right: 1px solid #ddd;
   padding-bottom: 15px;
   padding-top: 15px;
 }
-.head-searchbar .my-navbar-nav:last-child{ border-right:0}
-.round-btn{
+
+.head-searchbar .my-navbar-nav:last-child {
+  border-right: 0
+}
+
+.round-btn {
   height: 50px;
   width: 50px;
-  background-color:transparent;
+  background-color: transparent;
   border-radius: 34px;
   text-align: center;
   line-height: 50px;
-  color:gray;
+  color: gray;
   float: right;
 }
-.head-searchbar .flip-icon{
-   -webkit-transform: scaleX(-1);
-    transform: scaleX(-1);
+
+.head-searchbar .flip-icon {
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
 }
-.head-searchbar .hidden-search-box{
+
+.head-searchbar .hidden-search-box {
   /* display: none;  <-- removed, Angular controls visibility */
   position: absolute;
-    float: right;
-    background-color: rgb(255 255 255);
-    /* height: 50px; */
-    width: 30%;
-    z-index: 1000;
-    right: 120px;
-    /* border: 2px solid red; */
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-    top: 70px;
+  float: right;
+  background-color: rgb(255 255 255);
+  /* height: 50px; */
+  width: 30%;
+  z-index: 1000;
+  right: 120px;
+  /* border: 2px solid red; */
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  top: 70px;
 }
-.head-searchbar .addon-btn{
+
+.head-searchbar .addon-btn {
   width: 50px;
-  height:50px;
+  height: 50px;
   background-color: rgb(14 153 255);
   border: 0 none;
   margin-top: -5px;
   color: #ffffff;
 }
-.head-searchbar .addon-text-box, 
-.head-searchbar .addon-text-box:active
-{
+
+.head-searchbar .addon-text-box,
+.head-searchbar .addon-text-box:active {
   background-color: transparent !important;
   border: 0 none;
   color: #1e1e1e !important;
   border-radius: 0;
 }
-.head-searchbar .traingle{
-  height:15px;
+
+.head-searchbar .traingle {
+  height: 15px;
   width: 15px;
   background-color: transparent;
   border-left: 15px transparent solid;
   border-right: 15px transparent solid;
   border-bottom: 15px rgb(14 153 255) solid;
-  float:right;
+  float: right;
   margin-top: -10px;
   margin-right: 10px;
 }
-.nav-link.header-search
-{
-      background-color: #0e99ff;
-    color: #fff !important;
-    padding: 10px 14px !important;
-    border-radius: 50px;
-    cursor: pointer;
+
+.nav-link.header-search {
+  background-color: #0e99ff;
+  color: #fff !important;
+  padding: 10px 14px !important;
+  border-radius: 50px;
+  cursor: pointer;
 }
 
 
@@ -279,6 +295,7 @@
   border-radius: 8px 8px 0 0;
   border-bottom: 1px solid #e9ecef;
 }
+
 .user-dropdown-container .dropdown-item {
   padding: 0.75rem 1rem;
   font-size: 0.9rem;
@@ -311,12 +328,12 @@
   font-weight: 500;
   font-size: 0.9rem;
 }
-.user-btn.btn-default .user-avatar i
-{
+
+.user-btn.btn-default .user-avatar i {
   transform: rotate(0deg);
 }
-.navbar-expand-lg .navbar-nav .user-btn .dropdown-menu
-{
+
+.navbar-expand-lg .navbar-nav .user-btn .dropdown-menu {
   right: 0;
 }
 
@@ -324,20 +341,20 @@
   .navbar-collapse {
     padding: 1rem 0;
   }
-  
+
   .nav-link {
     padding: 0.5rem 0 !important;
     border-bottom: 1px solid #d7d7d7;
   }
-  
+
   .nav-link.active::after {
     left: 0;
     right: 0;
   }
-  
+
   .head-searchbar .hidden-search-box {
-    width: 90%;
-    right: 5%;
+    width: 84%;
+    right: 7%;
   }
 
   .user-dropdown-container .dropdown-menu {
@@ -351,30 +368,67 @@
   .user-name {
     display: inline !important;
   }
+
+  .search-box-mob {
+    display: block;
+  }
+
+  .nav-link.header-search {
+    padding: 7px 11px !important;
+  }
+
+  .search-box {
+    display: none;
+  }
+
+  .navbar ul.navbar-nav {
+    align-items: flex-start;
+  }
+
+  .navbar ul.navbar-nav li {
+    width: 100%;
+  }
+
+  .navbar {
+    top: 0;
+    right: 0;
+    left: 0;
+    position: fixed !important;
+  }
 }
+
 @media screen and (max-width: 767px) {
   .search-box-mob .nav-link.header-search {
     font-size: 14px;
-      padding: 6px 10px !important;
+    padding: 6px 10px !important;
   }
+
   .head-searchbar .hidden-search-box {
     width: 95%;
     right: 3%;
     top: 54px;
     box-shadow: none;
   }
-  .search-results-container h3
-  {
+
+  .search-results-container h3 {
     font-size: 20px;
   }
-  .head-searchbar .traingle
-  {
+
+  .head-searchbar .traingle {
     display: none;
   }
+
   .head-searchbar .addon-text-box,
-  .head-searchbar .addon-text-box:active
-  {
+  .head-searchbar .addon-text-box:active {
     background-color: #fff !important;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  }
+
+  .navbar ul.navbar-nav {
+    align-items: flex-start;
+  }
+
+  .navbar ul.navbar-nav li {
+    width: 100%;
   }
 }
