--- a/src/app/pages/doctors/doctors.html
+++ b/src/app/pages/doctors/doctors.html
@@ -37,19 +37,54 @@
                     <h4 class="mb-0">Select Treatments</h4>
                 </div>
                 <div class="filter-option d-flex gap-3">
-                    <!-- 🔹 Location dropdown -->
-                    <select class="form-select" [(ngModel)]="selectedLocation" (change)="onFilterChange()">
-                        <option value="">All Locations</option>
-                        <option *ngFor="let loc of locations" [value]="loc">{{ loc }}</option>
-                    </select>
+  <!-- Location Filter -->
+  <div class="custom-select-wrapper">
+    <div 
+      class="form-select" 
+      [class.open]="isLocationOpen" 
+      [class.placeholder]="!selectedLocation"
+      (click)="toggleLocationDropdown()">
+      <span>{{ selectedLocation || 'All Locations' }}</span>
+    </div>
 
-                    <!-- 🔹 Specialization dropdown -->
-                    <select class="form-select" [(ngModel)]="selectedSpecialization" (change)="onFilterChange()">
-                        <option value="">All Specializations</option>
-                        <option *ngFor="let spec of specializations" [value]="spec">{{ spec }}</option>
-                    </select>
-                </div>
+    <div class="select-dropdown" *ngIf="isLocationOpen">
+      <div class="select-option" (click)="selectLocation('')">
+        All Locations
+      </div>
+      <div 
+        class="select-option" 
+        *ngFor="let loc of locations"
+        [class.selected]="selectedLocation === loc" 
+        (click)="selectLocation(loc)">
+        {{ loc }}
+      </div>
+    </div>
+  </div>
 
+  <!-- Specialization Filter -->
+  <div class="custom-select-wrapper">
+    <div 
+      class="form-select" 
+      [class.open]="isSpecializationOpen" 
+      [class.placeholder]="!selectedSpecialization"
+      (click)="toggleSpecializationDropdown()">
+      <span>{{ selectedSpecialization || 'All Specializations' }}</span>
+    </div>
+
+    <div class="select-dropdown" *ngIf="isSpecializationOpen">
+      <div class="select-option" (click)="selectSpecialization('')">
+        All Specializations
+      </div>
+      <div 
+        class="select-option" 
+        *ngFor="let spec of specializations"
+        [class.selected]="selectedSpecialization === spec" 
+        (click)="selectSpecialization(spec)">
+        {{ spec }}
+      </div>
+    </div>
+  </div>
+</div>
             </div>
         </div>
         <div *ngIf="loading" class="text-center">Loading doctors...</div>
