--- a/src/app/pages/hero-section/hero-section.css
+++ b/src/app/pages/hero-section/hero-section.css
@@ -300,6 +300,10 @@
     {
         margin-top: 20px;
     }
+    .hero-main .hero-image img
+    {
+        min-height: 300px;
+    }
 }
 @media screen and (max-width: 767px)
 {
