--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -245,7 +245,7 @@
         </div>
     </section>
     <section class="we-offer ptc-80">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row justify-content-center">
                 <div class="col-lg-9">
                     <div class="main-head text-center mbc-50">
