--- a/src/app/pages/treatments/treatments.html
+++ b/src/app/pages/treatments/treatments.html
@@ -61,21 +61,21 @@
         <div class="tret-filter">
           <h4 class="mb-0">Select Treatments</h4>
         </div>
+
         <div class="filter-option d-flex gap-3">
           <!-- Location Filter -->
           <div class="custom-select-wrapper">
-            <div class="form-select" [class.open]="isLocationOpen" (click)="toggleLocationDropdown()">
+            <div class="form-select" [class.open]="isLocationOpen" [class.placeholder]="!selectedLocation"
+              (click)="toggleLocationDropdown()">
               <span>{{ selectedLocation || 'Change Location' }}</span>
-              <!-- <span class="arrow" [class.open]="isLocationOpen">▼</span> -->
             </div>
+
             <div class="select-dropdown" *ngIf="isLocationOpen">
               <div class="select-option" (click)="selectLocation('')">
                 Change Location
               </div>
-              <div class="select-option" 
-                  *ngFor="let loc of availableLocations"
-                  [class.selected]="selectedLocation === loc"
-                  (click)="selectLocation(loc)">
+              <div class="select-option" *ngFor="let loc of availableLocations"
+                [class.selected]="selectedLocation === loc" (click)="selectLocation(loc)">
                 {{ loc }}
               </div>
             </div>
@@ -83,18 +83,17 @@
 
           <!-- Treatment Filter -->
           <div class="custom-select-wrapper">
-            <div class="form-select" [class.open]="isTreatmentOpen" (click)="toggleTreatmentDropdown()">
+            <div class="form-select" [class.open]="isTreatmentOpen" [class.placeholder]="!selectedTreatmentType"
+              (click)="toggleTreatmentDropdown()">
               <span>{{ selectedTreatmentType || 'Change Treatment' }}</span>
-              <!-- <span class="arrow" [class.open]="isTreatmentOpen">▼</span> -->
             </div>
+
             <div class="select-dropdown" *ngIf="isTreatmentOpen">
               <div class="select-option" (click)="selectTreatment('')">
                 Change Treatment
               </div>
-              <div class="select-option" 
-                  *ngFor="let type of availableTreatmentTypes"
-                  [class.selected]="selectedTreatmentType === type"
-                  (click)="selectTreatment(type)">
+              <div class="select-option" *ngFor="let type of availableTreatmentTypes"
+                [class.selected]="selectedTreatmentType === type" (click)="selectTreatment(type)">
                 {{ type }}
               </div>
             </div>
