--- a/src/assets/css/custom-bk.css
+++ b/src/assets/css/custom-bk.css
@@ -68,7 +68,7 @@
 }
 
 .banner-offer img {
-    width: 80px;
+    width: 75px;
     margin-bottom: 15px;
 }
 
@@ -118,13 +118,9 @@
 .offer-info h4 {
     color: var(--secondary-color);
     font-family: var(--primary-font);
-    font-size: 22px;
+    font-size: 24px;
 }
-.client-feedback .user-card-rating
-{
-    margin-top: 0px;
-    margin-bottom: 10px;
-}
+
 .offer-info {
     background: linear-gradient(#f0f7fd00, #F0F7FD);
     position: absolute;
@@ -291,14 +287,12 @@
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
-    font-weight: 400;
-    margin-bottom: 0px;
 }
 
 .feedback-profile img {
-    height: 45px;
+    height: 50px;
     object-fit: cover;
-    width: 45px !important;
+    width: 50px !important;
     margin-bottom: 0px;
 }
 
@@ -469,7 +463,7 @@
 
 .user-card-rating {
     gap: 3px;
-    margin-top: 10px;
+    margin-bottom: 15px;
 }
 
 .faq-head p {
@@ -853,6 +847,10 @@
 {
     margin-bottom: 40px;
 }
+.filter-main .filter-item
+{
+    width: 50%;
+}
 .privacy-main h2
 {
     color: #151515;
@@ -879,19 +877,6 @@
 .attraction-main .detail-doctors.recent-post
 {
     margin-left: 0px;
-}
-.feedback-card hr
-{
-    border-color: #556171;
-    margin: 13px 0px;
-}
-.client-feedback .owl-carousel .owl-dots
-{
-  display: block !important;
-}
-.search-box-mob
-{
-    display: none;
 }
 /* responsive start */
 @media only screen and (min-width: 768px) and (max-width: 1024px)
@@ -1129,10 +1114,6 @@
     .contact-form-inner h5
     {
         margin-bottom: 25px;
-    }
-    .main-content
-    {
-        padding-top: 85px;
     }
 }
 @media screen and (max-width: 767px)
@@ -1454,7 +1435,7 @@
     }
     .user-card-img
     {
-        height: 210px;
+        height: 170px;
     }
     .user-card-img img
     {
@@ -1524,32 +1505,5 @@
     {
         margin-top: 0px;
         margin-bottom: 20px;
-    }
-    .search-box-mob 
-    {
-        display: block;
-    }
-    .search-box
-    {
-        display: none;
-    }
-    .navbar
-    {
-        top: 0;
-        right: 0;
-        left: 0;
-        position: fixed !important;
-    }
-    .custom-dropdown
-    {
-        width: 100%;
-    }
-    .navbar .collapse li.dropdown ul.dropdown-menu
-    {
-        margin: 10px 0px;
-    }
-    .main-content
-    {
-        padding-top: 60px;
     }
 }
