updated code with attraction event dynamic

--- a/src/app/pages/attractions/attractions.html
+++ b/src/app/pages/attractions/attractions.html
@@ -30,42 +30,29 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-4">
+                        <div class="col-lg-4">
                 <div class="detail-doctors recent-post">
                     <div class="dtl-doctor-head d-flex align-items-center justify-content-between">
                         <h4>Recent Event</h4>
                     </div>
-                    <div class="dtl-doctor-list d-flex align-items-center">
+                    
+                    <!-- Dynamic recent offers -->
+                    <div class="dtl-doctor-list d-flex align-items-center" *ngFor="let offer of recentOffers">
                         <div class="dtl-doctor-img">
-                            <img [src]="'assets/images/recent-post.png'" class="img-fluid">
+                            <img [src]="getOfferImageUrl(offer)" class="img-fluid">
                         </div>
                         <div class="dtl-doctor-info">
-                            <p>Do’s and Don’ts or precautions after cataract</p>
+                            <p>
+                                <a [routerLink]="['/attractions-detail', offer.id]" class="text-decoration-none">
+                                    {{ offer.name }}
+                                </a>
+                            </p>
                         </div>
                     </div>
-                    <div class="dtl-doctor-list d-flex align-items-center">
-                        <div class="dtl-doctor-img">
-                            <img [src]="'assets/images/recent-post.png'" class="img-fluid">
-                        </div>
-                        <div class="dtl-doctor-info">
-                            <p>Do’s and Don’ts or precautions after cataract</p>
-                        </div>
-                    </div>
-                    <div class="dtl-doctor-list d-flex align-items-center">
-                        <div class="dtl-doctor-img">
-                            <img [src]="'assets/images/recent-post.png'" class="img-fluid">
-                        </div>
-                        <div class="dtl-doctor-info">
-                            <p>Do’s and Don’ts or precautions after cataract</p>
-                        </div>
-                    </div>
-                    <div class="dtl-doctor-list d-flex align-items-center">
-                        <div class="dtl-doctor-img">
-                            <img [src]="'assets/images/recent-post.png'" class="img-fluid">
-                        </div>
-                        <div class="dtl-doctor-info">
-                            <p>Do’s and Don’ts or precautions after cataract</p>
-                        </div>
+                    
+                    <!-- Fallback message if no recent offers -->
+                    <div class="dtl-doctor-info" *ngIf="recentOffers.length === 0">
+                        <p class="text-muted">No recent offers available</p>
                     </div>
                 </div>
             </div>
@@ -73,19 +60,19 @@
                 <!-- Loading State -->
                 <div *ngIf="loading" class="text-center py-5">
                     <div class="spinner-border text-primary" role="status">
-                        <span class="visually-hidden">Loading content...</span>
+                        <span class="visually-hidden">Loading attractions...</span>
                     </div>
-                    <p class="mt-2">Loading special offers and articles...</p>
+                    <p class="mt-2">Loading special offers...</p>
                 </div>
 
                 <!-- No Content State -->
-                <div *ngIf="!loading && offers.length === 0 && blogs.length === 0" class="text-center py-5">
-                    <h5>No content available at the moment</h5>
-                    <p class="text-muted">Please check back later for exciting medical tourism offers and articles.</p>
+                <div *ngIf="!loading && offers.length === 0" class="text-center py-5">
+                    <h5>No attractions available at the moment</h5>
+                    <p class="text-muted">Please check back later for exciting medical tourism offers.</p>
                     <!-- Debug Info -->
                     <div class="mt-3">
-                        <small class="text-info">Debug: Offers loaded: {{ offersLoaded }}, Blogs loaded: {{ blogsLoaded }}</small><br>
-                        <small class="text-info">Offers count: {{ offers.length }}, Blogs count: {{ blogs.length }}</small>
+                        <small class="text-info">Debug: Offers loaded: {{ offersLoaded }}</small><br>
+                        <small class="text-info">Offers count: {{ offers.length }}</small>
                     </div>
                 </div>
 
@@ -138,37 +125,7 @@
                     </div>
                 </div>
 
-                <!-- Dynamic Blog Cards -->
-                <div class="blog-card" *ngFor="let blog of blogs">
-                    <!-- Featured Image -->
-                    <div class="blog-dtl-img">
-                        <img [src]="getBlogImageUrl(blog)" 
-                             [alt]="blog.title" 
-                             class="w-100 img-fluid rounded-4"
-                             (error)="$event.target.src='assets/images/attractions1.png'"/>
-                    </div>
 
-                    <div class="blog-card-dtl">
-                        <!-- Title -->
-                        <h4>{{ blog.title }}</h4>
-                        
-                        <!-- Blog Meta -->
-                        <div class="blog-meta mb-3">
-                            <div class="d-flex align-items-center mb-2">
-                                <i class="fas fa-calendar-alt text-primary me-2"></i>
-                                <small class="text-muted">Published: {{ formatBlogDate(blog.published_at) }}</small>
-                            </div>
-                        </div>
-
-                        <!-- Excerpt -->
-                        <div class="blog-dtl attractions-detail">
-                            <p>{{ blog.excerpt }}</p>
-                            <a [routerLink]="['/blog', blog.id]" class="btn-default mt-3">
-                                Read More <i class="fa-solid fa-arrow-up"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
 
             </div>
         </div>
